--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,16 +1,4 @@
 <h1>Add New</h1>
 
-<%= form_for @project do |f| %>
+<%= render 'form' %>
 
-<p>
-	<%= f.label :title %><br>
-	<%= f.text_field :title %>
-	<% if @project.errors.any? %>
-		<%= @project.errors.messages[:title][0] %>
-	<% end %>
-</p>
-
-<p>
-	<%= f.submit %>
-</p>
-<% end %>
