--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -11,4 +11,4 @@
   <% end %>
 </ul>
 
-<p><%= link_to "Add New", new_project_path %></p>
+<p><%= link_to "Add New Porject", new_project_path %></p>
